--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Brian Buie</title>
+    <title>👋 Hi</title>
     <style>
-      html, body {
+      html,
+      body {
         height: 100%;
       }
       body {
