--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
-      html,
-      body {
+      html {
         height: 100%;
       }
       body {
+        height: 100%;
         margin: 0;
         padding: 0;
         display: flex;
         flex-direction: column;
         justify-content: center;
         text-align: center;
+        text-indent: -3em;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
           "Segoe UI Symbol";
         background-color: #eee;
-        color: #333;
+        color: #444;
       }
       h1 {
         font-size: 64px;
